fixed card overlap and firefox rendering issue

--- a/styles/job.sass
+++ b/styles/job.sass
@@ -5,9 +5,10 @@
     display: flex
     flex-direction: column
     height: 400px
-    width: 350px
+    width: 100%
+    max-width: 350px
     overflow: hidden
-    margin: 20px 25px
+    margin: 10px 15px
     transition: all 0.3s ease
     .job-info
         padding: 10px
@@ -28,7 +29,6 @@
             text-align: center
             margin-top: 5px
             padding: 0px 20px
-            height: 100%
             span
                 font:
                     family: $font-sec
@@ -41,7 +41,7 @@
             text-align: center
             height: 25px
             margin-top: 15px
-            color: #000 
+            color: #000
             font:
                 family: $font-main
                 size: 1.2rem
@@ -49,6 +49,8 @@
             text-align: center
             cursor: default
             margin-top: 5px
+            height: 20px
+            overflow: hidden
             font:
                 family: $font-sec
                 size: 1.1rem
@@ -57,7 +59,7 @@
             overflow: hidden
             margin-top: 20px
             margin-bottom: 10px
-            height: 220px
+            height: 220px !important
             cursor: default
             .job-summary
                 align-items: left !important
