--- a/styles/mediaQueries.sass
+++ b/styles/mediaQueries.sass
@@ -8,6 +8,8 @@
         display: none
 //IPAD STYLES
 @media screen and (max-width: 770px)
+    .job
+        max-width: 100% !important
     .title
         h1
             display: none
